--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Ubike Map</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Ubike Map</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <script src="js/lib/knockout-3.4.2.js"></script>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">Ubike Map Taiwan</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Select City
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown" data-bind="foreach: cities">
+            <a class="dropdown-item" href="#" data-bind="text: name, click: $parent.setCity"></a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="row main">
+      <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 sidebar border-right border-light pt-3" data-bind="with: currentCity">
+        <input class="form-control" type="search" placeholder="Search" aria-label="Search" data-bind="textInput: $root.query, valueUpdate: 'keyup'">
+        <h2 data-bind="text: name"></h2>
+        <ul data-bind="foreach: $root.filteredStations">
+          <li data-bind="text: $data.StationName.En, click: $root.clickStation"></li>
+        </ul>
+      </div>
+      <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9 map" id="map"></div>
+    </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="js/lib/knockout-3.4.2.js"></script>
+  <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6juEj6zTe-AWAbqJfVPAN42X9KoCZXwc&v=3&callback=initMap">
+  </script>
+  <script src="js/constants.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/map.js"></script>
 </body>
 </html>
