--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="js/lib/knockout-3.4.2.js"></script>
   <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6juEj6zTe-AWAbqJfVPAN42X9KoCZXwc&v=3&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6juEj6zTe-AWAbqJfVPAN42X9KoCZXwc&v=3&callback=initMap" onerror="mapError()">
   </script>
   <script src="js/constants.js"></script>
   <script src="js/app.js"></script>
